--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <div class="row mb-5 main-container">
   <h1>Analizador de Hongos</h1>
 </div>
+<div class="row mb-5">
+  <div class="col-md-6 offset-md-3 text-center">
+      <h5>Para analizar si un hongo es comestible o es venenoso, identificar 
+      las características fisionómicas del hongo, y presione enviar.
+  </h5>
+  </div>
+
+</div>
 <div class="row px-5">
   <form [formGroup]="form">
      <select class="selectTag" name="miselect" formControlName="cap_shape">
