--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -8,8 +8,7 @@ select{
 
 .selectTag{
     margin-bottom:30px!important;
-    margin-left:10px;
-    margin-right:10px;
+
 }
 
 button{
@@ -33,3 +32,6 @@ button{
 }
 
 
+.col-md-2{
+    text-align: left;
+}
